# Copyright © 2018 Bart Massey
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "net-15"
version = "0.1.9"
authors = ["Bart Massey <bart@cs.pdx.edu>"]

[dependencies]
rand = "*"

[[bin]]
name = "net15"
path = "src/net15.rs"
